static/css/style.css
.example-class-selector {
	margin-top: 2em;
}


.project {

     margin-left: 20px;
}


.example-class-selector p {
	color: #CC00AA;
}

body {
			background-color:black;
			color: white !important;
			font-size: 24px;
}

header {
	color: #7ad75d !important;
	font-size:18px;
	text-align: center;
	top: 0;
	width: 100%;
	margin-bottom:50px;
	text-transform:uppercase;
}

header a {
	color: #7ad75d;

}


header img {
		width: 50%;
    height: auto;
    margin-top: 10%;
}

header span.mockup-link a:hover {
	color: white;
	text-decoration: none !important;
}

.artist-music {
	margin-top: 5%;
	margin-bottom: 5;
	width: 75%;
	display:block;
	margin-left:auto;
	margin-right:auto;
	height:auto;
}

.artist-music iframe {
	margin-top:25px;
	margin-bottom:25px;
}

footer {
	display:flex;
	margin-bottom: 50px;
	margin-top: 100px;
}

#artist-socials, .artist-logo  {
	display:block;
	margin-left:auto;
	margin-right:auto;
	width:50%;
	height:auto;
	text-align:center;

}

#artist-socials span,
header span {

	float: none !important;
}

#artist-socials	img {
		width: 30px !important;
		height: auto;
}

.jumbotron {
	position: relative;
	background: none;
}

.jumbotron:after {
     content:"";
     background: url("http://lorempixel.com/1140/283");
     opacity: 0.2;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     position: absolute;
     z-index: -1;
}

